clusters/homelab/apps/code-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    name: code-server
    istio-injection: enabled
