clusters/homelab/apps/code-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: code-server
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "codex.daddyshome.fr"
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: code-server-https
  hostnames:
  - "codex.daddyshome.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: code-server
      port: 8080
